[package]
name = "FraudsWarn"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros", "multipart"] }
candle-core = "0.9.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["bigdecimal", "chrono", "json", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "2.0.17"
tokenizers = "0.22.1"
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["tokio"] }
tower-http = { version = "0.6.6", features = ["compression-br", "cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }


